# TDDwithPython

./: .gitignore  functional_tests.py  pyproject.toml  test.bat  test_func.bat  test_unit.bat
src/superlists/: .editorconfig  .gitignore  README.md  README.rst  fun_tests.sh  local.yml  manage.py  production.yml  setup.cfg  shell_plus.sh  uni_tests.sh
src/superlists/.envs/.local/: .django  .postgres
src/superlists/compose/production/traefik/: traefik.yml
src/superlists/config/: api_router.py  asgi.py  urls.py  wsgi.py
src/superlists/config/settings/: base.py  local.py  production.py  test.py
src/superlists/docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
src/superlists/docs/pycharm/: configuration.rst
src/superlists/functional_tests/: t_test.py  tests.py
src/superlists/lists/: tests.py  urls.py  views.py
src/superlists/lists/migrations/: 0001_initial.py  0002_item_text.py  0003_auto_20210624_2236.py
src/superlists/lists/templates/: home.html  list.html
src/superlists/requirements/: base.txt  local.txt  production.txt
src/superlists/superlists/: conftest.py
src/superlists/superlists/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
src/superlists/superlists/static/css/: project.css
src/superlists/superlists/templates/: base.html
src/superlists/superlists/users/: admin.py  apps.py  models.py  urls.py
src/superlists/superlists/users/tests/: BKP_test_admin.py  BKP_test_models.py  BKP_test_views.py  functional_tests.py  test_forms.py  test_urls.py
superlists/superlists/: settings.py
