[tool.poetry]
name = "testdrivendevelopmentwithpython"
version = "0.1.0"
description = "Project the is built after the book Test Driven development with Python"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.1.12"
selenium = "^3.141.0"
loguru = "^0.5.3"
pytest = "6.2.4"
cookiecutter = "^1.7.3"
pytz = "2021.1"
python-slugify = "5.0.2"
Pillow = "8.2.0"
argon2-cffi = "20.1.0"
whitenoise = "5.2.0"
redis = "3.5.3"
uvicorn = {version = "0.14.0", extras = ["standard"]}
django-environ = "0.4.5"
django-model-utils = "4.1.1"
django-allauth = "0.44.0"
django-crispy-forms = "1.12.0"
django-redis = "5.0.0"
Werkzeug = "1.0.1"
ipdb = "0.13.9"
psycopg2-binary = "2.9.1"
watchgod = "0.7"
mypy = "0.902"
django-stubs = "1.8.0"
pytest-sugar = "0.9.4"
Sphinx = "4.0.2"
sphinx-autobuild = "2021.3.14"
flake8 = "3.9.2"
flake8-isort = "4.0.0"
coverage = "5.5"
pylint-django = "2.4.4"
pre-commit = "2.13.0"
factory-boy = "3.2.0"
django-debug-toolbar = "3.2.1"
django-extensions = "3.1.3"
django-coverage-plugin = "2.0.0"
pytest-django = "4.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
